...
                          Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                24.0, 0.0, 24.0, 0.0),
                            child: Container(
                              width: double.infinity,
                              child: TextFormField(
                                key: ValueKey('enterName_7scu'),
                                controller: _model.enterNameTextController,
                                focusNode: _model.enterNameFocusNode,
                                autofocus: false,
                                enabled: true,
                                obscureText: false,
                                decoration: InputDecoration(
...
                              ),
                            ),
                          ),
                          Padding(
                            padding: EdgeInsets.all(24.0),
                            child: FlutterFlowDropDown<String>(
                              key: ValueKey('vehicleDropDown_9dne'),
                              controller:
                                  _model.vehicleDropDownValueController ??=
                                      FormFieldController<String>(null),
                              options: ['Gas', 'Hybrid', 'Electric'],
                              onChanged: (val) => safeSetState(
                                  () => _model.vehicleDropDownValue = val),
                              width: double.infinity,
                              height: 40.0,
                              textStyle: FlutterFlowTheme.of(context)
                                  .bodyMedium
...
                            ),
                          ),
                          if (_model.vehicleDropDownValue != 'Electric')
                            Padding(
                              padding: EdgeInsets.all(24.0),
                              child: FlutterFlowDropDown<String>(
                                key: ValueKey('fuelDropDown_m0eg'),
                                controller:
                                    _model.fuelDropDownValueController ??=
                                        FormFieldController<String>(null),
                                options: [
                                  'Regular',
                                  'Mid-grade',
                                  'Premium',
                                  'Diesel'
                                ],
                                onChanged: (val) => safeSetState(
                                    () => _model.fuelDropDownValue = val),
                                width: double.infinity,
                                height: 40.0,
...
                            Padding(
                              padding: EdgeInsetsDirectional.fromSTEB(
                                  24.0, 0.0, 24.0, 0.0),
                              child: Container(
                                width: double.infinity,
                                child: TextFormField(
                                  key: ValueKey('enterMpg_06cl'),
                                  controller: _model.enterMpgTextController,
                                  focusNode: _model.enterMpgFocusNode,
                                  autofocus: false,
                                  enabled: true,
                                  obscureText: false,
                                  decoration: InputDecoration(
...
                      child: Column(
                        mainAxisSize: MainAxisSize.max,
                        mainAxisAlignment: MainAxisAlignment.end,
                        crossAxisAlignment: CrossAxisAlignment.center,
                        children: [
                          FFButtonWidget(
                            key: ValueKey('Button_mzyk'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'ABOUT_YOU_PAGE_NEXT_BTN_ON_TAP');
                              logFirebaseEvent('Button_backend_call');

                              await currentUserReference!
...
