...
                          Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                24.0, 0.0, 24.0, 0.0),
                            child: Container(
                              width: double.infinity,
                              child: TextFormField(
                                key: ValueKey('enterEmail_stjz'),
                                controller: _model.enterEmailTextController,
                                focusNode: _model.enterEmailFocusNode,
                                autofocus: false,
                                enabled: true,
                                obscureText: false,
                                decoration: InputDecoration(
...
                          Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                24.0, 0.0, 24.0, 0.0),
                            child: Container(
                              width: double.infinity,
                              child: TextFormField(
                                key: ValueKey('enterPass_j4d8'),
                                controller: _model.enterPassTextController,
                                focusNode: _model.enterPassFocusNode,
                                autofocus: false,
                                enabled: true,
                                obscureText: !_model.enterPassVisibility,
                                decoration: InputDecoration(
...
                      decoration: BoxDecoration(),
                      child: Column(
                        mainAxisSize: MainAxisSize.max,
                        mainAxisAlignment: MainAxisAlignment.end,
                        children: [
                          FFButtonWidget(
                            key: ValueKey('Button_ozln'),
                            onPressed: () async {
                              logFirebaseEvent('LOGIN_PAGE_LOGIN_BTN_ON_TAP');
                              logFirebaseEvent('Button_auth');
                              GoRouter.of(context).prepareAuthEvent();

                              final user = await authManager.signInWithEmail(
...
                                  fontStyle: FlutterFlowTheme.of(context)
                                      .headlineMedium
                                      .fontStyle,
                                ),
                          ),
                          FFButtonWidget(
                            key: ValueKey('Button_cs97'),
                            onPressed: () async {
                              logFirebaseEvent('LOGIN_PAGE_SIGN_UP_BTN_ON_TAP');
                              logFirebaseEvent('Button_navigate_to');

                              context.pushNamed(SignUpWidget.routeName);
                            },
...
