...
                                Padding(
                                  padding: EdgeInsetsDirectional.fromSTEB(
                                      24.0, 0.0, 24.0, 20.0),
                                  child: Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('enterEmail_xvom'),
                                      controller:
                                          _model.enterEmailTextController,
                                      focusNode: _model.enterEmailFocusNode,
                                      autofocus: false,
                                      enabled: true,
                                      obscureText: false,
...
                                Padding(
                                  padding: EdgeInsetsDirectional.fromSTEB(
                                      24.0, 0.0, 24.0, 20.0),
                                  child: Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('enterPass_alr8'),
                                      controller:
                                          _model.enterPassTextController,
                                      focusNode: _model.enterPassFocusNode,
                                      autofocus: false,
                                      enabled: true,
                                      obscureText: !_model.enterPassVisibility,
...
                                Padding(
                                  padding: EdgeInsetsDirectional.fromSTEB(
                                      24.0, 0.0, 24.0, 0.0),
                                  child: Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('reEnterPass_fjr1'),
                                      controller:
                                          _model.reEnterPassTextController,
                                      focusNode: _model.reEnterPassFocusNode,
                                      autofocus: false,
                                      enabled: true,
                                      obscureText:
...
                      decoration: BoxDecoration(),
                      child: Column(
                        mainAxisSize: MainAxisSize.max,
                        mainAxisAlignment: MainAxisAlignment.end,
                        children: [
                          FFButtonWidget(
                            key: ValueKey('Button_6rc8'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'SIGN_UP_PAGE_SIGN_UP_BTN_ON_TAP');
                              logFirebaseEvent('Button_validate_form');
                              if (_model.formKey.currentState == null ||
                                  !_model.formKey.currentState!.validate()) {
...
