...
                          if (_model.vehicleDropDownValue != 'Electric')
                            Padding(
                              padding: EdgeInsets.all(12.0),
                              child: AuthUserStreamWidget(
                                builder: (context) =>
                                    FlutterFlowDropDown<String>(
                                  key: ValueKey('fuelDropDown_vgd7'),
                                  controller:
                                      _model.fuelDropDownValueController ??=
                                          FormFieldController<String>(
                                    _model.fuelDropDownValue ??=
                                        valueOrDefault<String>(
                                      valueOrDefault(
...
                            ),
                        ].divide(SizedBox(height: 24.0)),
                      ),
                    ),
                  ),
                  FFButtonWidget(
                    key: ValueKey('Button_ppzg'),
                    onPressed: () async {
                      logFirebaseEvent('SETTINGS_PAGE_SAVE_CHANGES_BTN_ON_TAP');
                      logFirebaseEvent('Button_backend_call');

                      await currentUserReference!.update(createUsersRecordData(
                        email: _model.emailTextController.text,
...
